--- a/lib/easy_ml/railtie/templates/migration/create_easy_ml_models.rb.tt
+++ b/lib/easy_ml/railtie/templates/migration/create_easy_ml_models.rb.tt
@@ -5,12 +5,7 @@ class CreateEasyMLModels < ActiveRecord::Migration[6.0]
       t.string :name, null: false
       t.boolean :is_live, default: false
       t.string :version, null: false
-      t.string :ml_model
-      t.string :task
-      t.json :metrics, default: []
-      t.json :file, null: false
-      t.json :statistics
-      t.json :hyperparameters
+      t.json :configuration
 
       t.timestamps
 
