--- a/lib/easy_ml/railtie/templates/migration/create_easy_ml_models.rb.tt
+++ b/lib/easy_ml/railtie/templates/migration/create_easy_ml_models.rb.tt
@@ -3,9 +3,10 @@ class CreateEasyMLModels < ActiveRecord::Migration[6.0]
   def change
     create_table :easy_ml_models do |t|
       t.string :name, null: false
+      t.string :model_type
+      t.json :configuration
       t.boolean :is_live, default: false
       t.string :version, null: false
-      t.json :configuration
 
       t.timestamps
 
