Rocking and rolling

--- a/lib/easy_ml/railtie/templates/migration/create_easy_ml_datasets.rb.tt
+++ b/lib/easy_ml/railtie/templates/migration/create_easy_ml_datasets.rb.tt
@@ -3,6 +3,8 @@ class CreateEasyMLDatasets < ActiveRecord::Migration[6.0]
     create_table :easy_ml_datasets do |t|
       t.string :name, null: false
       t.string :dataset_type
+      t.string :status
+      t.string :version
       t.bigint :datasource_id
       t.json :configuration
 
@@ -10,6 +12,8 @@ class CreateEasyMLDatasets < ActiveRecord::Migration[6.0]
 
       t.index :created_at
       t.index :name
+      t.index :status
+      t.index [:name, :status]
       t.index :datasource_id
       t.index :dataset_type
     end
