Working on column configuration

--- a/lib/easy_ml/railtie/templates/migration/create_easy_ml_columns.rb.tt
+++ b/lib/easy_ml/railtie/templates/migration/create_easy_ml_columns.rb.tt
@@ -6,6 +6,7 @@ class CreateEasyMLColumns < ActiveRecord::Migration[6.0]
       t.string :datatype # The symbol representation (e.g., 'float', 'integer')
       t.string :polars_datatype # The full Polars class name (e.g., 'Polars::Float64')
       t.json :preprocessing_steps
+      t.boolean :is_target
       t.boolean :hidden, default: false
       t.boolean :drop_if_null, default: false
       t.json :sample_values # Store up to 3 sample values
