--- a/lib/easy_ml/railtie/templates/migration/create_easy_ml_transforms.rb.tt
+++ b/lib/easy_ml/railtie/templates/migration/create_easy_ml_transforms.rb.tt
@@ -1,10 +1,9 @@
-class CreateEasyMLDatasetTransforms < ActiveRecord::Migration[6.0]
+class CreateEasyMLTransforms < ActiveRecord::Migration[6.0]
   def change
-    create_table :easy_ml_dataset_transforms do |t|
+    create_table :easy_ml_transforms do |t|
       t.bigint :dataset_id, null: false
       t.string :transform_class, null: false
       t.string :transform_method, null: false
-      t.json :parameters
       t.integer :position
       t.datetime :applied_at
 
