--- a/lib/easy_ml/railtie/templates/migration/create_easy_ml_transforms.rb.tt
+++ b/lib/easy_ml/railtie/templates/migration/create_easy_ml_transforms.rb.tt
@@ -2,6 +2,7 @@ class CreateEasyMLTransforms < ActiveRecord::Migration[6.0]
   def change
     create_table :easy_ml_transforms do |t|
       t.bigint :dataset_id, null: false
+      t.string :name
       t.string :transform_class, null: false
       t.string :transform_method, null: false
       t.integer :position
@@ -9,7 +10,8 @@ class CreateEasyMLTransforms < ActiveRecord::Migration[6.0]
 
       t.timestamps
 
-      t.index [:dataset_id, :position]
+      t.index [:dataset_id, :position], unique: true
+      t.index [:dataset_id, :name], unique: true
       t.index :transform_class
       t.index :applied_at
     end
