--- a/lib/easy_ml/railtie/templates/migration/create_easy_ml_retraining_jobs.rb.tt
+++ b/lib/easy_ml/railtie/templates/migration/create_easy_ml_retraining_jobs.rb.tt
@@ -34,6 +34,7 @@ class CreateEasyMLRetrainingJobs < ActiveRecord::Migration[7.0]
 
     create_table :easy_ml_retraining_runs do |t|
       t.bigint :model_id
+      t.bigint :model_history_id
       t.bigint :retraining_job_id, null: false
       t.bigint :tuner_job_id, null: true
       t.string :status, default: 'pending'
@@ -49,6 +50,8 @@ class CreateEasyMLRetrainingJobs < ActiveRecord::Migration[7.0]
       t.jsonb :metrics
       t.jsonb :best_params
       t.string :wandb_url
+      t.string :snapshot_id
+      t.bigint :deploy_id
 
       t.timestamps
 
@@ -61,6 +64,10 @@ class CreateEasyMLRetrainingJobs < ActiveRecord::Migration[7.0]
       t.index :model_id
       t.index :trigger
       t.index :wandb_url
+      t.index :snapshot_id
+      t.index :deploy_id
+      t.index :model_history_id
+      t.index :deployable
     end
   end
 end
