--- a/lib/easy_ml/railtie/templates/migration/create_easy_ml_retraining_jobs.rb.tt
+++ b/lib/easy_ml/railtie/templates/migration/create_easy_ml_retraining_jobs.rb.tt
@@ -5,6 +5,7 @@ class CreateEasyMLRetrainingJobs < ActiveRecord::Migration[7.0]
       t.string :frequency, null: false  # day, week, month, hour
       t.json :at, null: false           # hour of day (0-23)
       t.json :evaluator                 # Model evaluator
+      t.boolean :tuning_enabled, default: false
       t.json :tuner_config              # configuration for the tuner
       t.string :tuning_frequency        # day, week, month, hour - when to run with tuner
       t.datetime :last_tuning_at        # track last tuning run
@@ -30,6 +31,7 @@ class CreateEasyMLRetrainingJobs < ActiveRecord::Migration[7.0]
       t.index :locked_at
       t.index :batch_mode
       t.index :auto_deploy
+      t.index :tuning_enabled
     end
 
     create_table :easy_ml_retraining_runs do |t|
@@ -42,7 +44,6 @@ class CreateEasyMLRetrainingJobs < ActiveRecord::Migration[7.0]
       t.float :threshold
       t.string :trigger, default: 'manual'
       t.string :threshold_direction
-      t.boolean :deployable
       t.datetime :started_at
       t.datetime :completed_at
       t.text :error_message
@@ -51,6 +52,9 @@ class CreateEasyMLRetrainingJobs < ActiveRecord::Migration[7.0]
       t.jsonb :best_params
       t.string :wandb_url
       t.string :snapshot_id
+      t.boolean :deployable
+      t.boolean :is_deploying
+      t.boolean :deployed
       t.bigint :deploy_id
 
       t.timestamps
@@ -68,6 +72,7 @@ class CreateEasyMLRetrainingJobs < ActiveRecord::Migration[7.0]
       t.index :deploy_id
       t.index :model_history_id
       t.index :deployable
+      t.index :is_deploying
     end
   end
 end
