--- a/lib/easy_ml/railtie/templates/migration/create_easy_ml_columns.rb.tt
+++ b/lib/easy_ml/railtie/templates/migration/create_easy_ml_columns.rb.tt
@@ -1,4 +1,4 @@
-class CreateEasyMLColumns < ActiveRecord::Migration[6.0]
+class CreateEasyMLColumns < ActiveRecord::Migration[<%= ActiveRecord::Migration.current_version %>]
   def change
     create_table :easy_ml_columns do |t|
       t.bigint :dataset_id, null: false
