--- a/lib/easy_ml/railtie/templates/migration/create_easy_ml_deploys.rb.tt
+++ b/lib/easy_ml/railtie/templates/migration/create_easy_ml_deploys.rb.tt
@@ -1,4 +1,4 @@
-class CreateEasyMLDeploys < ActiveRecord::Migration[6.0]
+class CreateEasyMLDeploys < ActiveRecord::Migration[<%= ActiveRecord::Migration.current_version %>]
   def change
     create_table :easy_ml_deploys do |t|
       t.bigint :model_id
