--- a/lib/easy_ml/railtie/templates/migration/create_easy_ml_feature_histories.rb.tt
+++ b/lib/easy_ml/railtie/templates/migration/create_easy_ml_feature_histories.rb.tt
@@ -3,7 +3,12 @@ require "historiographer/postgres_migration"
 class CreateEasyMLFeatureHistories < ActiveRecord::Migration[<%= ActiveRecord::Migration.current_version %>]
   def change
     create_table :easy_ml_feature_histories do |t|
-      t.histories(foreign_key: :feature_id)
+      t.histories(
+        foreign_key: :feature_id,
+        index_names: {
+          [:dataset_id, :feature_position] => "idx_feature_histories_on_dataset_and_position"
+        }
+      )
     end
   end
 end 
