--- a/lib/easy_ml/railtie/templates/migration/create_easy_ml_splitters.rb.tt
+++ b/lib/easy_ml/railtie/templates/migration/create_easy_ml_splitters.rb.tt
@@ -1,4 +1,4 @@
-class CreateEasyMLSplitters < ActiveRecord::Migration[6.0]
+class CreateEasyMLSplitters < ActiveRecord::Migration[<%= ActiveRecord::Migration.current_version %>]
   def change
     create_table :easy_ml_splitters do |t|
       t.string :splitter_type, null: false
