--- a/lib/easy_ml/railtie/templates/migration/create_easy_ml_datasets.rb.tt
+++ b/lib/easy_ml/railtie/templates/migration/create_easy_ml_datasets.rb.tt
@@ -1,4 +1,4 @@
-class CreateEasyMLDatasets < ActiveRecord::Migration[6.0]
+class CreateEasyMLDatasets < ActiveRecord::Migration[<%= ActiveRecord::Migration.current_version %>]
   def change
     create_table :easy_ml_datasets do |t|
       t.string :name, null: false
