--- a/lib/easy_ml/railtie/templates/migration/create_easy_ml_features.rb.tt
+++ b/lib/easy_ml/railtie/templates/migration/create_easy_ml_features.rb.tt
@@ -1,4 +1,4 @@
-class CreateEasyMLFeatures < ActiveRecord::Migration[6.0]
+class CreateEasyMLFeatures < ActiveRecord::Migration[<%= ActiveRecord::Migration.current_version %>]
   def change
     create_table :easy_ml_features do |t|
       t.bigint :dataset_id, null: false
