--- a/lib/easy_ml/railtie/templates/migration/create_easy_ml_retraining_jobs.rb.tt
+++ b/lib/easy_ml/railtie/templates/migration/create_easy_ml_retraining_jobs.rb.tt
@@ -1,4 +1,4 @@
-class CreateEasyMLRetrainingJobs < ActiveRecord::Migration[7.0]
+class CreateEasyMLRetrainingJobs < ActiveRecord::Migration[<%= ActiveRecord::Migration.current_version %>]
   def change
     create_table :easy_ml_retraining_jobs do |t|
       t.bigint :model_id
