--- a/lib/easy_ml/railtie/templates/migration/create_easy_ml_settings.rb.tt
+++ b/lib/easy_ml/railtie/templates/migration/create_easy_ml_settings.rb.tt
@@ -1,4 +1,4 @@
-class CreateEasyMLSettings < ActiveRecord::Migration[6.0]
+class CreateEasyMLSettings < ActiveRecord::Migration[<%= ActiveRecord::Migration.current_version %>]
   def change
     create_table :easy_ml_settings do |t|
       t.json :configuration
