Working on serializing

--- a/lib/easy_ml/railtie/templates/migration/create_easy_ml_event_contexts.rb.tt
+++ b/lib/easy_ml/railtie/templates/migration/create_easy_ml_event_contexts.rb.tt
@@ -3,6 +3,7 @@ class CreateEasyMLEventContexts < ActiveRecord::Migration[<%= ActiveRecord::Migr
     create_table :easy_ml_event_contexts do |t|
       t.references :event, null: false, foreign_key: { to_table: :easy_ml_events }
       t.jsonb :context, null: false, default: {}
+      t.string :format
       t.timestamps
     end
 
