--- a/lib/easy_ml/railtie/templates/migration/add_workflow_status_to_easy_ml_features.rb.tt
+++ b/lib/easy_ml/railtie/templates/migration/add_workflow_status_to_easy_ml_features.rb.tt
@@ -4,5 +4,10 @@ class AddWorkflowStatusToEasyMLFeatures < ActiveRecord::Migration[<%= ActiveReco
       add_column :easy_ml_features, :workflow_status, :string
       add_index :easy_ml_features, :workflow_status
     end
+
+    unless column_exists?(:easy_ml_feature_histories, :workflow_status)
+      add_column :easy_ml_feature_histories, :workflow_status, :string
+      add_index :easy_ml_feature_histories, :workflow_status
+    end
   end
 end
