Adding feature computation... might be where we're duping datasets somehow?

--- a/lib/easy_ml/railtie/templates/migration/add_computed_columns_to_easy_ml_columns.rb.tt
+++ b/lib/easy_ml/railtie/templates/migration/add_computed_columns_to_easy_ml_columns.rb.tt
@@ -5,5 +5,10 @@ class AddComputedColumnsToEasyMLColumns < ActiveRecord::Migration[<%= ActiveReco
     
     add_index :easy_ml_columns, :computed_by
     add_index :easy_ml_columns, :is_computed
+
+    add_column :easy_ml_column_histories, :computed_by, :string
+    add_index :easy_ml_column_histories, :computed_by
+    add_column :easy_ml_column_histories, :is_computed, :boolean, default: false
+    add_index :easy_ml_column_histories, :is_computed
   end
 end
