Attempting to let columns dictate when they need learn

--- a/lib/easy_ml/railtie/templates/migration/add_computed_columns_to_easy_ml_columns.rb.tt
+++ b/lib/easy_ml/railtie/templates/migration/add_computed_columns_to_easy_ml_columns.rb.tt
@@ -2,13 +2,17 @@ class AddComputedColumnsToEasyMLColumns < ActiveRecord::Migration[<%= ActiveReco
   def change
     add_column :easy_ml_columns, :computed_by, :string
     add_column :easy_ml_columns, :is_computed, :boolean, default: false
+    add_column :easy_ml_columns, :feature_id, :bigint
     
     add_index :easy_ml_columns, :computed_by
     add_index :easy_ml_columns, :is_computed
+    add_index :easy_ml_columns, :feature_id
 
     add_column :easy_ml_column_histories, :computed_by, :string
     add_index :easy_ml_column_histories, :computed_by
     add_column :easy_ml_column_histories, :is_computed, :boolean, default: false
     add_index :easy_ml_column_histories, :is_computed
+    add_column :easy_ml_column_histories, :feature_id, :bigint
+    add_index :easy_ml_column_histories, :feature_id
   end
 end
